AGGIUNTE (#1) - Integrazione della classificazione del viaggio, ovvero scelta tra obiettivo(visitare,rilassarsi,ricollegarsi alla natura) e mezzo(piedi,bici,auto,trasporto pubblico); - Aggiunta del collegamento a google maps direttamente dall'app; - Modifica della tabella di lavoro;
Prossimi step:
- Aggiunta delle funzionalità di esplora, ormai promessa, e di oggettistica consigliata "forse per ultima".